@@ -1,6 +1,10 @@
-1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+1998-10-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (REVISION): Increment. Swarm 1.3.1 released.
+	
+	* Customize.m ([Customize_s -_setCreateByMessage_:to:], 
+	[Customize_s -_setCreateByMessage_:toCopy:]): 
+	Eliminate sign vs. unsigned warnings.
 
 1998-09-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
